--- a/talanga.css
+++ b/talanga.css
@@ -768,7 +768,7 @@ transform: scale(1.05);
 
      
   .heading span{
-    font-size: 2.5rem;
+    font-size: 2.0rem;
     background:#666;
     color:aqua;
     border-radius: .5rem;
@@ -816,6 +816,9 @@ transform: scale(1.05);
       width:100%;
       height:300px;
     }
+    
+    .review{
+      display:none;}
 
     .Mapafinal .Mapafinaldata{
       display: none;
