--- a/Islas_Bahia.css
+++ b/Islas_Bahia.css
@@ -308,8 +308,138 @@ html{
     text-align: justify;
 } 
 
+.Mapafinal{
+  display: grid;
+  grid-template-columns: repeat(12,1fr);
+}
+.Mapafinal .Mapafinaldata{
+  grid-column: 2/5 ;
+  height: 800px;
+  background: rgba(128, 125, 125, 0.4);
+  overflow: scroll;
+  border: solid black 2px;
+}
+
+.Mapafinal .Mapafinaldata{
+  display: flex;
+  flex-direction: column;
+  margin:0;
+}
+
+.Mapafinal .Mapafinaldata .contenido{
+  display: flex;
+  width: 100%;
+  height: 300px;
+  border: 2px solid black;
+}
+
+.Mapafinal .Mapafinaldata .contenido-informacion{
+  width: 60%;
+}
+.Mapafinal .Mapafinaldata .contenido-informacion h3{
+  font-size:18px;
+  color:white;
+  text-shadow:  0px 0px 6px yellow;
+  text-align: center;
+}
+
+.Mapafinal .Mapafinaldata .contenido-informacion form .input{
+  padding: 5px 0;
+  border: 1px solid black;
+  margin: auto;
+  width: 100%;}
+
+.Mapafinal .Mapafinaldata .contenido-informacion form button{
+  margin-top: 15px ;
+  padding: 5px 0;
+  margin-left: 30%;
+}
+
+.Mapafinal .Mapafinaldata .contenido-imagen{
+  width:40%;
+}
+
+.Mapafinal .Mapafinaldata .contenido-imagen img{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin: auto;
+  border: 2px solid white;
+  margin-left:15px;
+}
 
 
+.Mapafinal .Mapafinaldata .resumen h2{
+  font-size:22px;
+  color:white;
+  text-shadow:  0px 0px 6px yellow;
+  text-align: center;} 
+
+  .Mapafinal .Mapafinaldata .resumen p{
+    font-size:16px;
+    text-align: justify;} 
+
+  
+
+.Mapafinal .map2{
+  grid-column: 5/12;
+  height:800px;
+  border:1px solid black;} 
+
+
+
+  .footer{
+    background:#333;
+  }
+  
+  .footer .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap:1.5rem;
+  }
+  
+  .footer .box-container .box{
+    padding:1rem 0;
+    flex:1 1 25rem;
+  }
+  
+  .footer .box-container .box h3{
+    font-size: 2.5rem;
+    padding:.7rem 0;
+    color:#fff;
+  }
+  
+  .footer .box-container .box p{
+    font-size: 1.5rem;
+    padding:.7rem 0;
+    color:#eee;
+  }
+  
+  .footer .box-container .box a{
+    display: block;
+    font-size: 1.5rem;
+    padding:.7rem 0;
+    color:#eee;
+  }
+  
+  .footer .box-container .box a:hover{
+    color:var(--orange);
+    text-decoration: underline;
+  }
+  
+  .footer .credit{
+    text-align: center;
+    padding:2rem 1rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+    font-weight: normal;
+    color:#fff;
+    border-top: .1rem solid rgba(255,255,255,.2);
+  }
+  
+  .footer .credit span{
+    color:var(--orange);
+  }
 
  
   @media (max-width:1200px){
@@ -384,8 +514,22 @@ html{
   
     .review{
       display:none;}
+
+      .Mapafinal .Mapafinaldata{
+        display: none;
+      }
+    
+      .Mapafinal .map2{
+        grid-column: 1/-1;
+        height:450px;
+        border:1px solid black;}
+
+
+
+
   }
- 
+
+  
 @media (max-width:450px){
   
     html{
